compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_could_not_unify7.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn main() { let assert 5 = \"\" }"
---
----- SOURCE CODE
fn main() { let assert 5 = "" }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:24
  │
1 │ fn main() { let assert 5 = "" }
  │                        ^

Expected type:

    String

Found type:

    Int
